content based filtering

--- a/fyp_part3_data_engineering.ipynb
+++ b/fyp_part3_data_engineering.ipynb
@@ -6962,7 +6962,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 31,
       "metadata": {
         "id": "eHFf4R71m9b_"
       },
@@ -6974,6 +6974,28 @@
         "    f.close() \n",
         "\n",
         "save_dict_to_file(user_similar_movies_map)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import json \n",
+        "\n",
+        "a_file = open(\"data.json\", \"w\")\n",
+        "json.dump(user_similar_movies_map, a_file)\n",
+        "a_file.close()\n",
+        "\n",
+        "a_file = open(\"data.json\", \"r\")\n",
+        "output = a_file.read()\n",
+        "print(output)"
       ]
     },
     {
