--- a/fyp_part_3_data_engineering.ipynb
+++ b/fyp_part_3_data_engineering.ipynb
@@ -2784,20 +2784,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 200,
+      "execution_count": 207,
       "metadata": {},
       "outputs": [],
       "source": [
         "def has_intersection(list1, list2): \n",
+        "    print(\"*** lists \")\n",
+        "    print(list1)\n",
+        "    print(list2)\n",
         "    for item in list1: \n",
         "        if item in list2: \n",
+        "            print(\"TRUE\")\n",
+        "            print(\" **** \")\n",
         "            return True\n",
+        "    print(\"FALSE\")\n",
+        "    print(\" **** \")\n",
         "    return False"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 204,
+      "execution_count": 208,
       "metadata": {},
       "outputs": [
         {
@@ -2805,16 +2812,22 @@
           "output_type": "stream",
           "text": [
             "0\n",
-            "100000\n",
-            "200000\n",
-            "300000\n",
-            "400000\n",
-            "500000\n",
-            "600000\n",
-            "700000\n",
-            "800000\n",
-            "900000\n",
-            "1000000\n"
+            "*** lists \n",
+            "[list([0])]\n",
+            "[list([0, 8, 14])]\n",
+            " **** \n",
+            "*** lists \n",
+            "[list([14, 8, 12])]\n",
+            "[list([0, 8, 14])]\n",
+            " **** \n",
+            "*** lists \n",
+            "[list([12, 4])]\n",
+            "[list([0, 8, 14])]\n",
+            " **** \n",
+            "*** lists \n",
+            "[list([0])]\n",
+            "[list([0, 8, 14])]\n",
+            " **** \n"
           ]
         }
       ],
@@ -2822,8 +2835,11 @@
         "# check if each movie is of the user's favourite genre \n",
         "\n",
         "main['is_favourite_genre'] = 0\n",
-        "\n",
+        "count = 0\n",
         "for index, row in main.iterrows(): \n",
+        "    count += 1\n",
+        "    if (count == 5): \n",
+        "        break\n",
         "    if (index % 100000 == 0): \n",
         "        print(index)\n",
         "    user = row['user_id']\n",
