--- a/fyp_part_3_data_engineering.ipynb
+++ b/fyp_part_3_data_engineering.ipynb
@@ -2784,27 +2784,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 207,
+      "execution_count": 216,
       "metadata": {},
       "outputs": [],
       "source": [
         "def has_intersection(list1, list2): \n",
-        "    print(\"*** lists \")\n",
-        "    print(list1)\n",
-        "    print(list2)\n",
+        "    list1 = list1[0]\n",
+        "    list2 = list2[0]\n",
         "    for item in list1: \n",
         "        if item in list2: \n",
-        "            print(\"TRUE\")\n",
-        "            print(\" **** \")\n",
         "            return True\n",
-        "    print(\"FALSE\")\n",
-        "    print(\" **** \")\n",
         "    return False"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 208,
+      "execution_count": 217,
       "metadata": {},
       "outputs": [
         {
@@ -2812,22 +2807,16 @@
           "output_type": "stream",
           "text": [
             "0\n",
-            "*** lists \n",
-            "[list([0])]\n",
-            "[list([0, 8, 14])]\n",
-            " **** \n",
-            "*** lists \n",
-            "[list([14, 8, 12])]\n",
-            "[list([0, 8, 14])]\n",
-            " **** \n",
-            "*** lists \n",
-            "[list([12, 4])]\n",
-            "[list([0, 8, 14])]\n",
-            " **** \n",
-            "*** lists \n",
-            "[list([0])]\n",
-            "[list([0, 8, 14])]\n",
-            " **** \n"
+            "100000\n",
+            "200000\n",
+            "300000\n",
+            "400000\n",
+            "500000\n",
+            "600000\n",
+            "700000\n",
+            "800000\n",
+            "900000\n",
+            "1000000\n"
           ]
         }
       ],
@@ -2835,11 +2824,7 @@
         "# check if each movie is of the user's favourite genre \n",
         "\n",
         "main['is_favourite_genre'] = 0\n",
-        "count = 0\n",
         "for index, row in main.iterrows(): \n",
-        "    count += 1\n",
-        "    if (count == 5): \n",
-        "        break\n",
         "    if (index % 100000 == 0): \n",
         "        print(index)\n",
         "    user = row['user_id']\n",
@@ -2853,23 +2838,157 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 206,
+      "execution_count": 218,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "0    1000209\n",
+              "1    828608\n",
+              "0    171601\n",
               "Name: is_favourite_genre, dtype: int64"
             ]
           },
-          "execution_count": 206,
+          "execution_count": 218,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "main['is_favourite_genre'].value_counts()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 219,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>user_id</th>\n",
+              "      <th>movie_id</th>\n",
+              "      <th>rating</th>\n",
+              "      <th>CBF</th>\n",
+              "      <th>CF</th>\n",
+              "      <th>age_when_rating</th>\n",
+              "      <th>age_at_release</th>\n",
+              "      <th>released_after_birth</th>\n",
+              "      <th>gender</th>\n",
+              "      <th>is_favourite_genre</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1193</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "      <td>-22</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>661</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>-1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1</td>\n",
+              "      <td>914</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "      <td>-33</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1</td>\n",
+              "      <td>3408</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1</td>\n",
+              "      <td>2355</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   user_id  movie_id  rating  CBF  CF  age_when_rating  age_at_release  \\\n",
+              "0        1      1193       5    0   4                1             -22   \n",
+              "1        1       661       3    0   3                1              -1   \n",
+              "2        1       914       3    0   4                1             -33   \n",
+              "3        1      3408       4    0   4                1               3   \n",
+              "4        1      2355       5    0   4                1               1   \n",
+              "\n",
+              "   released_after_birth gender  is_favourite_genre  \n",
+              "0                     0      1                   1  \n",
+              "1                     0      1                   1  \n",
+              "2                     0      1                   0  \n",
+              "3                     1      1                   1  \n",
+              "4                     1      1                   1  "
+            ]
+          },
+          "execution_count": 219,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "main.head()"
       ]
     },
     {
