--- a/fyp_part_3_data_engineering.ipynb
+++ b/fyp_part_3_data_engineering.ipynb
@@ -2992,10 +2992,278 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Feature 8: imdb rating"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 221,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "imdb_ratings = pd.read_csv(\"title.ratings.tsv\", sep='\\t')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 222,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>tconst</th>\n",
+              "      <th>averageRating</th>\n",
+              "      <th>numVotes</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>tt0000001</td>\n",
+              "      <td>5.7</td>\n",
+              "      <td>1864</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>tt0000002</td>\n",
+              "      <td>6.0</td>\n",
+              "      <td>244</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>tt0000003</td>\n",
+              "      <td>6.5</td>\n",
+              "      <td>1632</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>tt0000004</td>\n",
+              "      <td>5.8</td>\n",
+              "      <td>158</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>tt0000005</td>\n",
+              "      <td>6.2</td>\n",
+              "      <td>2458</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "      tconst  averageRating  numVotes\n",
+              "0  tt0000001            5.7      1864\n",
+              "1  tt0000002            6.0       244\n",
+              "2  tt0000003            6.5      1632\n",
+              "3  tt0000004            5.8       158\n",
+              "4  tt0000005            6.2      2458"
+            ]
+          },
+          "execution_count": 222,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "imdb_ratings.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 223,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/nutsa/.pyenv/versions/3.7.7/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3444: DtypeWarning: Columns (4,5) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+            "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+          ]
+        }
+      ],
+      "source": [
+        "imdb_titles = pd.read_csv(\"title.basics.tsv\", sep='\\t')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 226,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "imdb_titles= imdb_titles[imdb_titles['titleType']=='movie']"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
+      "source": [
+        "imdb_titles['startYear'].max()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 227,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>tconst</th>\n",
+              "      <th>titleType</th>\n",
+              "      <th>primaryTitle</th>\n",
+              "      <th>originalTitle</th>\n",
+              "      <th>isAdult</th>\n",
+              "      <th>startYear</th>\n",
+              "      <th>endYear</th>\n",
+              "      <th>runtimeMinutes</th>\n",
+              "      <th>genres</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>498</th>\n",
+              "      <td>tt0000502</td>\n",
+              "      <td>movie</td>\n",
+              "      <td>Bohemios</td>\n",
+              "      <td>Bohemios</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1905</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>100</td>\n",
+              "      <td>\\N</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>570</th>\n",
+              "      <td>tt0000574</td>\n",
+              "      <td>movie</td>\n",
+              "      <td>The Story of the Kelly Gang</td>\n",
+              "      <td>The Story of the Kelly Gang</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1906</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>70</td>\n",
+              "      <td>Action,Adventure,Biography</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>587</th>\n",
+              "      <td>tt0000591</td>\n",
+              "      <td>movie</td>\n",
+              "      <td>The Prodigal Son</td>\n",
+              "      <td>L'enfant prodigue</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1907</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>90</td>\n",
+              "      <td>Drama</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>610</th>\n",
+              "      <td>tt0000615</td>\n",
+              "      <td>movie</td>\n",
+              "      <td>Robbery Under Arms</td>\n",
+              "      <td>Robbery Under Arms</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1907</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>Drama</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>625</th>\n",
+              "      <td>tt0000630</td>\n",
+              "      <td>movie</td>\n",
+              "      <td>Hamlet</td>\n",
+              "      <td>Amleto</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1908</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>Drama</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        tconst titleType                 primaryTitle  \\\n",
+              "498  tt0000502     movie                     Bohemios   \n",
+              "570  tt0000574     movie  The Story of the Kelly Gang   \n",
+              "587  tt0000591     movie             The Prodigal Son   \n",
+              "610  tt0000615     movie           Robbery Under Arms   \n",
+              "625  tt0000630     movie                       Hamlet   \n",
+              "\n",
+              "                   originalTitle isAdult startYear endYear runtimeMinutes  \\\n",
+              "498                     Bohemios       0      1905      \\N            100   \n",
+              "570  The Story of the Kelly Gang       0      1906      \\N             70   \n",
+              "587            L'enfant prodigue       0      1907      \\N             90   \n",
+              "610           Robbery Under Arms       0      1907      \\N             \\N   \n",
+              "625                       Amleto       0      1908      \\N             \\N   \n",
+              "\n",
+              "                         genres  \n",
+              "498                          \\N  \n",
+              "570  Action,Adventure,Biography  \n",
+              "587                       Drama  \n",
+              "610                       Drama  \n",
+              "625                       Drama  "
+            ]
+          },
+          "execution_count": 227,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "imdb_titles.head()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": []
     }
   ],
