--- a/fyp_part_3_data_engineering.ipynb
+++ b/fyp_part_3_data_engineering.ipynb
@@ -4454,17 +4454,393 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 333,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "source": [
+        "## TMDB dataset overview"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
+      "source": [
+        "!pip3 install tmdbsimple"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 336,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import tmdbsimple as tmdb\n",
+        "tmdb.API_KEY = ''"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 341,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'adult': False,\n",
+              " 'backdrop_path': '/ncEsesgOJDNrTUED89hYbA117wo.jpg',\n",
+              " 'belongs_to_collection': {'id': 2344,\n",
+              "  'name': 'The Matrix Collection',\n",
+              "  'poster_path': '/bV9qTVHTVf0gkW0j7p7M0ILD4pG.jpg',\n",
+              "  'backdrop_path': '/bRm2DEgUiYciDw3myHuYFInD7la.jpg'},\n",
+              " 'budget': 63000000,\n",
+              " 'genres': [{'id': 28, 'name': 'Action'},\n",
+              "  {'id': 878, 'name': 'Science Fiction'}],\n",
+              " 'homepage': 'http://www.warnerbros.com/matrix',\n",
+              " 'id': 603,\n",
+              " 'imdb_id': 'tt0133093',\n",
+              " 'original_language': 'en',\n",
+              " 'original_title': 'The Matrix',\n",
+              " 'overview': 'Set in the 22nd century, The Matrix tells the story of a computer hacker who joins a group of underground insurgents fighting the vast and powerful computers who now rule the earth.',\n",
+              " 'popularity': 106.83,\n",
+              " 'poster_path': '/f89U3ADr1oiB1s9GkdPOEpXUk5H.jpg',\n",
+              " 'production_companies': [{'id': 79,\n",
+              "   'logo_path': '/tpFpsqbleCzEE2p5EgvUq6ozfCA.png',\n",
+              "   'name': 'Village Roadshow Pictures',\n",
+              "   'origin_country': 'US'},\n",
+              "  {'id': 372,\n",
+              "   'logo_path': None,\n",
+              "   'name': 'Groucho II Film Partnership',\n",
+              "   'origin_country': ''},\n",
+              "  {'id': 1885,\n",
+              "   'logo_path': '/xlvoOZr4s1PygosrwZyolIFe5xs.png',\n",
+              "   'name': 'Silver Pictures',\n",
+              "   'origin_country': 'US'},\n",
+              "  {'id': 174,\n",
+              "   'logo_path': '/IuAlhI9eVC9Z8UQWOIDdWRKSEJ.png',\n",
+              "   'name': 'Warner Bros. Pictures',\n",
+              "   'origin_country': 'US'}],\n",
+              " 'production_countries': [{'iso_3166_1': 'US',\n",
+              "   'name': 'United States of America'}],\n",
+              " 'release_date': '1999-03-30',\n",
+              " 'revenue': 463517383,\n",
+              " 'runtime': 136,\n",
+              " 'spoken_languages': [{'english_name': 'English',\n",
+              "   'iso_639_1': 'en',\n",
+              "   'name': 'English'}],\n",
+              " 'status': 'Released',\n",
+              " 'tagline': 'Welcome to the Real World.',\n",
+              " 'title': 'The Matrix',\n",
+              " 'video': False,\n",
+              " 'vote_average': 8.2,\n",
+              " 'vote_count': 21220}"
+            ]
+          },
+          "execution_count": 341,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "m = tmdb.Movies(603)\n",
+        "m.info()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 372,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "'Movies' object is not subscriptable",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/var/folders/yw/ylqvp3zj44sd953rbzx5g3gh0000gn/T/ipykernel_1657/4248266140.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtmdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMovies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Clueless'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mm\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'title'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'Movies' object is not subscriptable"
+          ]
+        }
+      ],
+      "source": [
+        "m = tmdb.Movies('Clueless')\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 382,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "500\n",
+            "1000\n",
+            "1500\n",
+            "2000\n",
+            "2500\n",
+            "3000\n",
+            "3500\n"
+          ]
+        }
+      ],
+      "source": [
+        "imdb_merge['original_language'] = ''\n",
+        "imdb_merge['budget'] = -1\n",
+        "imdb_merge['overview'] = ''\n",
+        "imdb_merge['popularity'] = -1\n",
+        "imdb_merge['revenue'] = -1\n",
+        "imdb_merge['tagline'] = ''\n",
+        "imdb_merge['tmdb_vote_avg'] = -1\n",
+        "imdb_merge['tmdb_vote_count'] = -1\n",
+        "\n",
+        "for index, row in imdb_merge.iterrows(): \n",
+        "    if (index % 500 == 0): \n",
+        "        print(index)\n",
+        "    title = row['title']\n",
+        "    response = search.movie(query=title)\n",
+        "    info = response.get('results')\n",
+        "    \n",
+        "    if (len(info) > 0):\n",
+        "        info = info[0] \n",
+        "        id = int(info['id'])\n",
+        "        info = tmdb.Movies(id)\n",
+        "        info = info.info() \n",
+        "        \n",
+        "        original_language = info['original_language']\n",
+        "        budget = info['budget']\n",
+        "        overview = info['overview']\n",
+        "        popularity = info['popularity']\n",
+        "        revenue = info['revenue']\n",
+        "        tagline = info['tagline']\n",
+        "        tmdb_vote_avg = info['vote_average']\n",
+        "        tmdb_vote_count = info['vote_count']\n",
+        "        \n",
+        "        imdb_merge.at[index, 'original_language'] = original_language\n",
+        "        imdb_merge.at[index, 'budget'] = budget\n",
+        "        imdb_merge.at[index, 'overview'] = overview\n",
+        "        imdb_merge.at[index, 'popularity'] = popularity\n",
+        "        imdb_merge.at[index, 'revenue'] = revenue\n",
+        "        imdb_merge.at[index, 'tagline'] = tagline\n",
+        "        imdb_merge.at[index, 'tmdb_vote_avg'] = tmdb_vote_avg\n",
+        "        imdb_merge.at[index, 'tmdb_vote_count'] = tmdb_vote_count\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 384,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>movie_id</th>\n",
+              "      <th>year</th>\n",
+              "      <th>averageRating</th>\n",
+              "      <th>numVotes</th>\n",
+              "      <th>isAdult</th>\n",
+              "      <th>budget</th>\n",
+              "      <th>popularity</th>\n",
+              "      <th>revenue</th>\n",
+              "      <th>tmdb_vote_avg</th>\n",
+              "      <th>tmdb_vote_count</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>3883.00000</td>\n",
+              "      <td>3883.00000</td>\n",
+              "      <td>3883.00000</td>\n",
+              "      <td>3883.00000</td>\n",
+              "      <td>3883.00000</td>\n",
+              "      <td>3883.00000</td>\n",
+              "      <td>3883.00000</td>\n",
+              "      <td>3883.00000</td>\n",
+              "      <td>3883.00000</td>\n",
+              "      <td>3883.00000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>1986.04945</td>\n",
+              "      <td>1986.06696</td>\n",
+              "      <td>3.91360</td>\n",
+              "      <td>39126.63971</td>\n",
+              "      <td>0.00567</td>\n",
+              "      <td>13140987.99897</td>\n",
+              "      <td>22.83312</td>\n",
+              "      <td>40674879.79861</td>\n",
+              "      <td>5.18208</td>\n",
+              "      <td>877.33969</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>1146.77835</td>\n",
+              "      <td>16.89569</td>\n",
+              "      <td>3.62203</td>\n",
+              "      <td>132669.95423</td>\n",
+              "      <td>0.07507</td>\n",
+              "      <td>26838666.22383</td>\n",
+              "      <td>104.57995</td>\n",
+              "      <td>116604755.69633</td>\n",
+              "      <td>2.31699</td>\n",
+              "      <td>2149.51126</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>1.00000</td>\n",
+              "      <td>1919.00000</td>\n",
+              "      <td>-1.00000</td>\n",
+              "      <td>-1.00000</td>\n",
+              "      <td>0.00000</td>\n",
+              "      <td>-1.00000</td>\n",
+              "      <td>-1.00000</td>\n",
+              "      <td>-1.00000</td>\n",
+              "      <td>-1.00000</td>\n",
+              "      <td>-1.00000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>982.50000</td>\n",
+              "      <td>1982.00000</td>\n",
+              "      <td>-1.00000</td>\n",
+              "      <td>-1.00000</td>\n",
+              "      <td>0.00000</td>\n",
+              "      <td>0.00000</td>\n",
+              "      <td>4.00000</td>\n",
+              "      <td>0.00000</td>\n",
+              "      <td>5.00000</td>\n",
+              "      <td>27.00000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>2010.00000</td>\n",
+              "      <td>1994.00000</td>\n",
+              "      <td>5.80000</td>\n",
+              "      <td>2291.00000</td>\n",
+              "      <td>0.00000</td>\n",
+              "      <td>220000.00000</td>\n",
+              "      <td>11.00000</td>\n",
+              "      <td>532654.00000</td>\n",
+              "      <td>6.00000</td>\n",
+              "      <td>170.00000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>2980.50000</td>\n",
+              "      <td>1997.00000</td>\n",
+              "      <td>6.80000</td>\n",
+              "      <td>23591.50000</td>\n",
+              "      <td>0.00000</td>\n",
+              "      <td>15000000.00000</td>\n",
+              "      <td>21.00000</td>\n",
+              "      <td>28762305.50000</td>\n",
+              "      <td>6.50000</td>\n",
+              "      <td>717.00000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>3952.00000</td>\n",
+              "      <td>2000.00000</td>\n",
+              "      <td>9.30000</td>\n",
+              "      <td>2554263.00000</td>\n",
+              "      <td>1.00000</td>\n",
+              "      <td>300000000.00000</td>\n",
+              "      <td>3956.00000</td>\n",
+              "      <td>2187463944.00000</td>\n",
+              "      <td>10.00000</td>\n",
+              "      <td>26520.00000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        movie_id       year  averageRating      numVotes    isAdult  \\\n",
+              "count 3883.00000 3883.00000     3883.00000    3883.00000 3883.00000   \n",
+              "mean  1986.04945 1986.06696        3.91360   39126.63971    0.00567   \n",
+              "std   1146.77835   16.89569        3.62203  132669.95423    0.07507   \n",
+              "min      1.00000 1919.00000       -1.00000      -1.00000    0.00000   \n",
+              "25%    982.50000 1982.00000       -1.00000      -1.00000    0.00000   \n",
+              "50%   2010.00000 1994.00000        5.80000    2291.00000    0.00000   \n",
+              "75%   2980.50000 1997.00000        6.80000   23591.50000    0.00000   \n",
+              "max   3952.00000 2000.00000        9.30000 2554263.00000    1.00000   \n",
+              "\n",
+              "               budget  popularity          revenue  tmdb_vote_avg  \\\n",
+              "count      3883.00000  3883.00000       3883.00000     3883.00000   \n",
+              "mean   13140987.99897    22.83312   40674879.79861        5.18208   \n",
+              "std    26838666.22383   104.57995  116604755.69633        2.31699   \n",
+              "min          -1.00000    -1.00000         -1.00000       -1.00000   \n",
+              "25%           0.00000     4.00000          0.00000        5.00000   \n",
+              "50%      220000.00000    11.00000     532654.00000        6.00000   \n",
+              "75%    15000000.00000    21.00000   28762305.50000        6.50000   \n",
+              "max   300000000.00000  3956.00000 2187463944.00000       10.00000   \n",
+              "\n",
+              "       tmdb_vote_count  \n",
+              "count       3883.00000  \n",
+              "mean         877.33969  \n",
+              "std         2149.51126  \n",
+              "min           -1.00000  \n",
+              "25%           27.00000  \n",
+              "50%          170.00000  \n",
+              "75%          717.00000  \n",
+              "max        26520.00000  "
+            ]
+          },
+          "execution_count": 384,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "imdb_merge.describe()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 379,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "9603"
+            ]
+          },
+          "execution_count": 379,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "response = search.movie(query='Clueless')\n",
+        "int(response.get('results')[0]['id'])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": []
     }
   ],
