--- a/fyp_part_3_data_engineering.ipynb
+++ b/fyp_part_3_data_engineering.ipynb
@@ -4839,6 +4839,15 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 387,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "imdb_merge.to_csv('\\\\imdb_tmdb_data', index=False)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": []
