--- a/the_movies_dataset/movies_data_engineering.ipynb
+++ b/the_movies_dataset/movies_data_engineering.ipynb
@@ -723,17 +723,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
     "import string \n",
-    "from string import punctuation\n"
+    "from string import punctuation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,12 +790,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
     "movies_cbf.to_csv('movies_cbf.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
